searchbar/find binding experiment 🤓

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
 <html>
 <body>
-  {{{app}}}
+<main class="elements-index" id="content" role="main">
+  <div class="site-wrapper">
+    <div class="grid-row">
+      {{{app}}}
+    </div>
+  </div>
+</main>
+
   <script src="client.js"></script>
 </body>
 </html>
