--- a/shared/Routes/Find.html
+++ b/shared/Routes/Find.html
@@ -1,4 +1,6 @@
-<h1>Find course</h1>
+<div class="column-full">
+    <h1>Find course</h1>
+</div>
 <Searchbar></Searchbar>
 <script>
     import Searchbar from './../components/Searchbar.html';
