--- a/shared/Routes/Find.html
+++ b/shared/Routes/Find.html
@@ -1,12 +1,20 @@
 <div class="column-full">
-    <h1>Find course</h1>
+    <Searchbar  labelText='{{labelText}}'></Searchbar>
 </div>
-<Searchbar></Searchbar>
+
 <script>
     import Searchbar from './../components/Searchbar.html';
     export default {
+        data () {
+            return {
+                formAction: 'search',
+                labelText: 'Find course'
+            }
+        },
+
         components: {
             Searchbar
         }
-    }
+    };
+
 </script>
