--- a/shared/Routes/Find.html
+++ b/shared/Routes/Find.html
@@ -1,5 +1,5 @@
 <div class="column-full">
-    <Searchbar  labelText='{{labelText}}'></Searchbar>
+    <Searchbar  :labelText :formAction></Searchbar>
 </div>
 
 <script>
