--- a/routes/_components/MainView/index.html
+++ b/routes/_components/MainView/index.html
@@ -9,7 +9,7 @@
 				</li>
 			{{else}}
 				<li class="nav-item">
-					<a href="/login" class='nav-link'>
+					<a href="/routes/login" class='nav-link'>
 						Your Feed
 					</a>
 				</li>
