--- a/routes/_components/Nav.html
+++ b/routes/_components/Nav.html
@@ -26,7 +26,7 @@
 				</li>
 			{{else}}
 				<li class="nav-item">
-					<a href="/login" class="nav-link {{page === 'login' ? 'active' : ''}}">
+					<a href="/routes/login" class="nav-link {{page === 'login' ? 'active' : ''}}">
 						Sign in
 					</a>
 				</li>
