--- a/routes/index.html
+++ b/routes/index.html
@@ -3,14 +3,8 @@
 		<h1>home</h1>
 		<div class="container page">
 			<div class="row">
-				<MainView :user :tag bind:tab />
+				<MainView :user bind:tab />
 
-				<div class="col-md-3">
-					<div class="sidebar">
-						<p>Popular Tags</p>
-						<Tags :tags on:select='set({ tag: event.tag, tab: "tag" })' />
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
@@ -19,23 +13,13 @@
 <script>
 	import Layout from './_components/Layout.html';
 	import MainView from './_components/MainView/index.html';
-	import Tags from './_components/Tags.html';
-	import * as auth from './_auth.js';
-	import * as api from './_api.js';
-
 	export default {
-		components: { Layout, MainView, Tags },
+		components: { Layout, MainView}
 
-		preload({ session }) {
-			return {
-				user: session ? session.user : auth.user
-			};
-		},
-
-		oncreate() {
-			api.get('tags').then(({ tags }) => {
-				this.set({ tags });
-			});
-		}
+		// preload({ session }) {
+		// 	return {
+		// 		user: session ? session.user : auth.user
+		// 	};
+		// }
 	};
 </script>
