--- a/shared/Routes/Signin.html
+++ b/shared/Routes/Signin.html
@@ -3,7 +3,7 @@
     <h1 class="heading-large">Sign in</h1>
 
     <form method="post" name="userLoginForm" class="push-bottom">
-        <input type="hidden" name="_csrf" value="{{ csrf }}">
+        <input type="hidden" name="sessionDataKey" value="{{sessionDataKey}}" />
         <div class="form-group">
             <label for="username" class="form-label">
                 Email address
@@ -22,3 +22,7 @@
     </form>
 
 </div>
+
+<script>
+
+</script>
