--- a/routes/_components/Nav.html
+++ b/routes/_components/Nav.html
@@ -7,35 +7,14 @@
 			</li>
 
 			{{#if user}}
-				<li class="nav-item">
-					<a href="/editor" class="nav-link {{page === 'editor' ? 'active' : ''}}">
-						<i class="ion-compose"></i>&nbsp;New Post
-					</a>
-				</li>
 
-				<li class="nav-item">
-					<a href="/settings" class="nav-link {{page === 'settings' ? 'active' : ''}}">
-						<i class="ion-gear-a"></i>&nbsp;Settings
-					</a>
-				</li>
-
-				<li class="nav-item">
-					<a href='/@{{user.username}}' class="nav-link">
-						<img src={{user.image}} class="user-pic" alt={{user.username}} /> {{user.username}}
-					</a>
-				</li>
 			{{else}}
 				<li class="nav-item">
-					<a href="/routes/login" class="nav-link {{page === 'login' ? 'active' : ''}}">
+					<a href="/login" class="nav-link {{page === 'login' ? 'active' : ''}}">
 						Sign in
 					</a>
 				</li>
 
-				<li class="nav-item">
-					<a href="/register" class="nav-link {{page === 'register' ? 'active' : ''}}">
-						Sign up
-					</a>
-				</li>
 			{{/if}}
 		</ul>
 	</div>
