--- a/routes/_components/Nav.html
+++ b/routes/_components/Nav.html
@@ -1,10 +1,8 @@
 <nav class="navbar navbar-light">
 	<div class="container">
-		<a class="navbar-brand" href="/">conduit</a>
+		<a class="navbar-brand" href="/">Home</a>
 		<ul class="nav navbar-nav pull-xs-right">
-			<li class="nav-item">
-				<a class="nav-link {{page === 'home' ? 'active' : ''}}" href="/">Home</a>
-			</li>
+
 
 			{{#if user}}
 
