remove src/, build main.css in assets/styles/

--- a/routes/index.html
+++ b/routes/index.html
@@ -1,6 +1,6 @@
 <Layout page='home'>
 	<div class="home-page">
-		<h1>home</h1>
+		<h1 class="heading-large">Home</h1>
 		<div class="container page">
 			<div class="row">
 
@@ -15,11 +15,5 @@
 
 	export default {
 		components: { Layout }
-
-		// preload({ session }) {
-		// 	return {
-		// 		user: session ? session.user : auth.user
-		// 	};
-		// }
 	};
 </script>
