--- a/routes/sign-in/index.html
+++ b/routes/sign-in/index.html
@@ -9,8 +9,6 @@
 			<div class="row">
 
 				<div class="col-md-6 offset-md-3 col-xs-12">
-					<h1 class="text-xs-center">Sign In</h1>
-
 
 					<div class="column-two-thirds">
 
@@ -23,7 +21,7 @@
 								<input class="form-control form-control-2-3" placeholder="Username" id="username" name="username" type="email" bind:value=username>
 							</fieldset>
 							<fieldset class="form-group">
-								<input class="form-control form-control-2-3" type="password" placeholder="Password" bind:value=password>
+								<input class="form-control form-control-2-3" type="password" name="password" placeholder="Password" bind:value=password>
 							</fieldset>
 							<div>
 								<input type="submit" class="button" value="Continue">
